<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.abdosharaf.countries.singleCountry.SingleCountryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".singleCountry.SingleCountryActivity">

        <TextView
            android:id="@+id/tvCountryTitle"
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:text='@{viewModel.country.name + " - " + viewModel.country.native}'
            android:textAlignment="center"
            android:visibility="@{viewModel.country == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Egypt - مصر" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8dp"
            android:visibility="@{viewModel.country == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCountryTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_8dp"
                android:paddingBottom="@dimen/_8dp">

                <TextView
                    android:id="@+id/tvCountryNameLabel"
                    style="@style/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/country_name"
                    android:visibility="@{viewModel.country.name == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCountryName"
                    style="@style/item_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@{viewModel.country.name}"
                    android:textAlignment="viewEnd"
                    android:visibility="@{viewModel.country.name == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCountryNameLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCountryNameLabel"
                    tools:text="Egypt" />

                <TextView
                    android:id="@+id/tvCountryNativeLabel"
                    style="@style/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/country_native"
                    android:visibility="@{viewModel.country.native == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCountryName" />

                <TextView
                    android:id="@+id/tvCountryNative"
                    style="@style/item_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@{viewModel.country.native}"
                    android:textAlignment="viewEnd"
                    android:visibility="@{viewModel.country.native == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCountryNativeLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCountryNativeLabel"
                    tools:text="مصر" />

                <TextView
                    android:id="@+id/tvCountryCapitalLabel"
                    style="@style/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/country_capital"
                    android:visibility="@{viewModel.country.capital == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountryNative" />

                <TextView
                    android:id="@+id/tvCountryCapital"
                    style="@style/item_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@{viewModel.country.capital}"
                    android:textAlignment="viewEnd"
                    android:visibility="@{viewModel.country.capital == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCountryCapitalLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCountryCapitalLabel"
                    tools:text="Cairo" />

                <TextView
                    android:id="@+id/tvCountryContinentLabel"
                    style="@style/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/country_continent"
                    android:visibility="@{viewModel.country.continent == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountryCapital" />

                <TextView
                    android:id="@+id/tvCountryContinent"
                    style="@style/item_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text='@{viewModel.country.continent.name + " - " + viewModel.country.continent.code}'
                    android:textAlignment="viewEnd"
                    android:visibility="@{viewModel.country.continent == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCountryContinentLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCountryContinentLabel"
                    tools:text="Africa - AF" />

                <TextView
                    android:id="@+id/tvCountryLanguagesLabel"
                    style="@style/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/country_languages"
                    app:hideIfNull="@{viewModel.country.languages}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCountryContinent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCountryLanguages"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:paddingStart="@dimen/_16dp"
                    android:paddingEnd="@dimen/_4dp"
                    app:bindAllLanguages="@{viewModel.country.languages}"
                    app:hideIfNull="@{viewModel.country.languages}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountryLanguagesLabel"
                    tools:listitem="@layout/item_language" />

                <TextView
                    android:id="@+id/tvCountryCurrencyLabel"
                    style="@style/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/country_currency"
                    android:visibility="@{viewModel.country.currency == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvCountryLanguages" />

                <TextView
                    android:id="@+id/tvCountryCurrency"
                    style="@style/item_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@{viewModel.country.currency}"
                    android:textAlignment="viewEnd"
                    android:visibility="@{viewModel.country.currency == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCountryCurrencyLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCountryCurrencyLabel"
                    tools:text="EGB" />

                <TextView
                    android:id="@+id/tvCountryCurrenciesLabel"
                    style="@style/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/country_currencies"
                    app:hideIfNull="@{viewModel.country.currencies}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountryCurrency" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCountryCurrencies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:paddingStart="@dimen/_16dp"
                    android:paddingEnd="@dimen/_4dp"
                    app:bindAllCurrencies="@{viewModel.country.currencies}"
                    app:hideIfNull="@{viewModel.country.currencies}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountryCurrenciesLabel"
                    tools:listitem="@layout/item_currency" />

                <TextView
                    android:id="@+id/tvCountryEmojiLabel"
                    style="@style/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/country_emoji"
                    android:visibility="@{viewModel.country.emoji == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvCountryCurrencies" />

                <TextView
                    android:id="@+id/tvCountryEmoji"
                    style="@style/item_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@{viewModel.country.emoji}"
                    android:textAlignment="viewEnd"
                    android:visibility="@{viewModel.country.emoji == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCountryEmojiLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCountryEmojiLabel"
                    tools:text="flag" />

                <TextView
                    android:id="@+id/tvCountryPhoneLabel"
                    style="@style/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/country_phone"
                    android:visibility="@{viewModel.country.phone == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountryEmoji" />

                <TextView
                    android:id="@+id/tvCountryPhone"
                    style="@style/item_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@{viewModel.country.phone}"
                    android:textAlignment="viewEnd"
                    android:visibility="@{viewModel.country.phone == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCountryPhoneLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCountryPhoneLabel"
                    tools:text="20" />

                <TextView
                    android:id="@+id/tvCountryPhonesLabel"
                    style="@style/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/country_phones"
                    app:hideIfNull="@{viewModel.country.phones}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountryPhone" />

                <TextView
                    android:id="@+id/tvCountryPhones"
                    style="@style/item_data"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@{viewModel.country.phones.toString()}"
                    android:textAlignment="viewEnd"
                    app:hideIfNull="@{viewModel.country.phones}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvCountryPhonesLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCountryPhonesLabel"
                    tools:text="20" />

                <TextView
                    android:id="@+id/tvCountryStatesLabel"
                    style="@style/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/country_states"
                    app:hideIfNull="@{viewModel.country.states}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountryPhones" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCountryStates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:paddingStart="@dimen/_16dp"
                    android:paddingEnd="@dimen/_4dp"
                    app:bindAllStates="@{viewModel.country.states}"
                    app:hideIfNull="@{viewModel.country.states}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCountryStatesLabel"
                    tools:listitem="@layout/item_state" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.country == null ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
